<resources>
    <string name="app_name">LessonApp3</string>
    <string name="you_re_welcome_my_dude">Hello, dude. Who are you?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">name</string>
    <string name="confirm_password">confirm password</string>
    <string name="you_re_entered">You\'re entered</string>
    <string name="sign_out">Sign out</string>
    <string name="we_cant_find_you">We can\'t find you, maybe you don\'t exist</string>
    <string name="you_are_welcome">\You are welcome, %1$s\  </string>
    <string name="user_did_not_found">User didn\'t found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_name">Invalid name. Enter at least 3 characters</string>
    <string name="invalid_login">Invalid login. Enter at least 3 characters</string>
    <string name="short_password">Invalid password. Enter at least 6 characters</string>
    <string name="passwords_are_different">Passwords are different</string>
    <string name="jedi_name">jedi name</string>
    <string name="sign_in_as_jedi">Sign in as jedi</string>
    <string name="wrong_jedi_name">Wrong jedi name</string>
    <string name="i_m_jedi">I\'m jedi</string>
    <string name="jedi_password">jedi password</string>
    <string name="user_already_exist">User already exist</string>
    <string name="jedi_enter_toast_wait_until_fetching_data">Please wait until we are fetching data</string>
</resources>