<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signUp.SignUpActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="200dp"
        app:boxStrokeColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ilLogin"
        app:layout_constraintTop_toTopOf="@id/ilLogin"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@id/ilLogin"
            app:layout_constraintStart_toStartOf="@id/ilLogin"
            app:layout_constraintTop_toBottomOf="@id/ilLogin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@id/ilLogin"
        app:layout_constraintStart_toStartOf="@id/ilLogin"
        app:layout_constraintTop_toBottomOf="@id/ilLogin"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingVertical="8dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/ilLogin"
            app:layout_constraintStart_toStartOf="@id/ilLogin"
            app:layout_constraintTop_toBottomOf="@id/ilName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/ilName"
        app:layout_constraintStart_toStartOf="@id/ilName"
        app:layout_constraintTop_toBottomOf="@id/ilName"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:paddingVertical="8dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/ilPassword"
            app:layout_constraintStart_toStartOf="@id/ilPassword"
            app:layout_constraintTop_toBottomOf="@id/ilPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="8dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@id/ilConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/ilConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/ilConfirmPassword" />

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibtnToEnterActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/baseline_arrow_back_ios_24" />

    </Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>