<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signIn.SignInActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/ilLogin"
        app:layout_constraintStart_toStartOf="@id/ilLogin"
        app:layout_constraintTop_toBottomOf="@id/ilLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/ilLogin"
            app:layout_constraintStart_toStartOf="@id/ilLogin"
            app:layout_constraintTop_toBottomOf="@id/ilLogin" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="8dp"
        android:layout_marginStart="80dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@id/ilPassword"
        app:layout_constraintStart_toStartOf="@id/ilPassword"
        app:layout_constraintTop_toBottomOf="@id/ilPassword" />

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibtn_to_enter_activity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/baseline_arrow_back_ios_24" />

    </Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>