<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.jediEnter.JediActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        android:layout_marginTop="240dp"
        android:hint="@string/jedi_name"
        >
        <AutoCompleteTextView
            android:id="@+id/actvjediName"
            android:layout_width="match_parent"
            android:paddingHorizontal="16dp"
            android:layout_height="48dp"
             />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/nameInput"
        app:layout_constraintTop_toTopOf="@id/nameInput"
        app:layout_constraintBottom_toBottomOf="@id/nameInput"
        android:paddingHorizontal="8dp"
        android:indeterminateDrawable="@drawable/progress_bar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        android:hint="@string/jedi_password"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etjediPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnJediSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_as_jedi"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"/>


    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/purple_500">
        <ImageButton
            android:id="@+id/ibtnToEnterActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_arrow_back_ios_24"
            />

    </Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>